<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/username_profile"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/profile_image_round_profile_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/upload" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/full_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/email_id" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/phone_no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/profession" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/education" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/mother_tongue" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/orange"
            android:text="@string/other" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/child" />

        <!--    ///////////////////////////////////-->

        <!--    //////////////////////////////////////-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/orange"
            android:text="@string/child_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--    ///////////////////////////////////-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/orange"
            android:text="@string/child_education" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="240dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:clickable="true"
            android:textSize="16sp"
            android:focusable="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/select_btn_sign_in"
            android:text="@string/save"/>

    </LinearLayout>

</ScrollView>